Fixed reviews overflow

--- a/client/src/global.sass
+++ b/client/src/global.sass
@@ -13,6 +13,9 @@ body
 ::-webkit-scrollbar
     display: none
 
+*:focus 
+    outline: none !important
+
 .center
     // Layout
     display: flex
