--- a/client/src/sections/about/About.sass
+++ b/client/src/sections/about/About.sass
@@ -58,6 +58,8 @@
 
     // Layout
     min-height: 200px
+    max-width: 100vw
+    overflow-x: hidden !important
 
     // Misc Styling
     color: #1a202c
